Initial work on features

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 122,
    "metadata": {
     "collapsed": true
    },
@@ -14,13 +14,12 @@
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "\n",
-    "path = './/Data//Emails'\n",
-    "\n"
+    "path = './/Data//Emails'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 125,
    "metadata": {
     "collapsed": false
    },
@@ -490,13 +489,14 @@
        "[4021 rows x 3 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_data = pd.read_csv(os.path.join(path,'emails.train.csv'))"
+    "train_data = pd.read_csv(os.path.join(path,'emails.train.csv'))\n",
+    "train_data"
    ]
   },
   {
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 126,
    "metadata": {
     "collapsed": false
    },
@@ -533,24 +533,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Text:  Subject: great nnews  hello , welcome to medzonline sh groundsel op  we are pleased to introduce ourselves as one of the ieading online phar felicitation maceuticai shops .  helter v  shakedown r  a cosmopolitan l  l blister l  l bestow ag  ac tosher l  is coadjutor va  confidant um  andmanyother .  - sav inexpiable e over 75 %  - total confide leisure ntiaiity  - worldwide s polite hlpplng  - ov allusion er 5 miilion customers in 150 countries  have devitalize a nice day !\n",
+      "Sample text:\n",
       "\n",
-      "Length of text:  478\n",
+      " Subject: great nnews  hello , welcome to medzonline sh groundsel op  we are pleased to introduce ourselves as one of the ieading online phar felicitation maceuticai shops .  helter v  shakedown r  a cosmopolitan l  l blister l  l bestow ag  ac tosher l  is coadjutor va  confidant um  andmanyother .  - sav inexpiable e over 75 %  - total confide leisure ntiaiity  - worldwide s polite hlpplng  - ov allusion er 5 miilion customers in 150 countries  have devitalize a nice day !\n",
       "\n",
-      "Word count:  {'Subject': 1, 'great': 1, 'nnews': 1, 'hello': 1, 'welcome': 1, 'to': 2, 'medzonline': 1, 'sh': 1, 'groundsel': 1, 'op': 1, 'we': 1, 'are': 1, 'pleased': 1, 'introduce': 1, 'ourselves': 1, 'as': 1, 'one': 1, 'of': 1, 'the': 1, 'ieading': 1, 'online': 1, 'phar': 1, 'felicitation': 1, 'maceuticai': 1, 'shops': 1, 'helter': 1, 'v': 1, 'shakedown': 1, 'r': 1, 'a': 2, 'cosmopolitan': 1, 'l': 5, 'blister': 1, 'bestow': 1, 'ag': 1, 'ac': 1, 'tosher': 1, 'is': 1, 'coadjutor': 1, 'va': 1, 'confidant': 1, 'um': 1, 'andmanyother': 1, 'sav': 1, 'inexpiable': 1, 'e': 1, 'over': 1, 'total': 1, 'confide': 1, 'leisure': 1, 'ntiaiity': 1, 'worldwide': 1, 's': 1, 'polite': 1, 'hlpplng': 1, 'ov': 1, 'allusion': 1, 'er': 1, 'miilion': 1, 'customers': 1, 'in': 1, 'countries': 1, 'have': 1, 'devitalize': 1, 'nice': 1, 'day': 1}\n",
+      "Length of sample text:  478\n",
+      "-----ALL WORDS----\n",
       "\n",
-      "All words:  ['Subject', 'naturally', 'irresistible', 'your', 'corporate', 'identity', 'lt', 'is', 'really', 'hard', 'to', 'recollect', 'a', 'company', 'the', 'market', 'full', 'of', 'suqgestions', 'and', 'information', 'isoverwhelminq', 'but', 'good', 'catchy', 'logo', 'stylish', 'statlonery', 'outstanding', 'website', 'will', 'make', 'task', 'much', 'easier', 'we', 'do', 'not', 'promise', 'that', 'havinq', 'ordered', 'iogo', 'automaticaily', 'become', 'world', 'ieader', 'it', 'isguite', 'ciear', 'without', 'products', 'effective', 'business', 'organization', 'practicable', 'aim', 'be', 'hotat', 'nowadays', 'marketing', 'efforts', 'more', 'here', 'list', 'clear', 'benefits', 'creativeness', 'hand', 'made', 'original', 'logos', 'specially', 'done', 'reflect', 'distinctive', 'image', 'convenience', 'stationery', 'are', 'provided', 'in', 'all', 'formats', 'easy', 'use', 'content', 'management', 'system', 'letsyou', 'change', 'even', 'its', 'structure', 'promptness', 'you', 'see', 'drafts', 'within', 'three']\n",
+      "Word count: \n",
+      "\n",
+      " {'Subject': 1, 'great': 1, 'nnews': 1, 'hello': 1, 'welcome': 1, 'to': 2, 'medzonline': 1, 'sh': 1, 'groundsel': 1, 'op': 1, 'we': 1, 'are': 1, 'pleased': 1, 'introduce': 1, 'ourselves': 1, 'as': 1, 'one': 1, 'of': 1, 'the': 1, 'ieading': 1, 'online': 1, 'phar': 1, 'felicitation': 1, 'maceuticai': 1, 'shops': 1, 'helter': 1, 'v': 1, 'shakedown': 1, 'r': 1, 'a': 2, 'cosmopolitan': 1, 'l': 5, 'blister': 1, 'bestow': 1, 'ag': 1, 'ac': 1, 'tosher': 1, 'is': 1, 'coadjutor': 1, 'va': 1, 'confidant': 1, 'um': 1, 'andmanyother': 1, 'sav': 1, 'inexpiable': 1, 'e': 1, 'over': 1, 'total': 1, 'confide': 1, 'leisure': 1, 'ntiaiity': 1, 'worldwide': 1, 's': 1, 'polite': 1, 'hlpplng': 1, 'ov': 1, 'allusion': 1, 'er': 1, 'miilion': 1, 'customers': 1, 'in': 1, 'countries': 1, 'have': 1, 'devitalize': 1, 'nice': 1, 'day': 1}\n",
+      "\n",
+      "First hundred words: \n",
+      "\n",
+      " ['Subject', 'naturally', 'irresistible', 'your', 'corporate', 'identity', 'lt', 'is', 'really', 'hard', 'to', 'recollect', 'a', 'company', 'the', 'market', 'full', 'of', 'suqgestions', 'and', 'information', 'isoverwhelminq', 'but', 'good', 'catchy', 'logo', 'stylish', 'statlonery', 'outstanding', 'website', 'will', 'make', 'task', 'much', 'easier', 'we', 'do', 'not', 'promise', 'that', 'havinq', 'ordered', 'iogo', 'automaticaily', 'become', 'world', 'ieader', 'it', 'isguite', 'ciear', 'without', 'products', 'effective', 'business', 'organization', 'practicable', 'aim', 'be', 'hotat', 'nowadays', 'marketing', 'efforts', 'more', 'here', 'list', 'clear', 'benefits', 'creativeness', 'hand', 'made', 'original', 'logos', 'specially', 'done', 'reflect', 'distinctive', 'image', 'convenience', 'stationery', 'are', 'provided', 'in', 'all', 'formats', 'easy', 'use', 'content', 'management', 'system', 'letsyou', 'change', 'even', 'its', 'structure', 'promptness', 'you', 'see', 'drafts', 'within', 'three']\n",
       "\n",
       "Number of unique words:  480902\n",
       "\n",
-      "Average number of unique words in each email:  119.59761253419548\n"
+      "Average number of unique words in each email:  119.59761253419548\n",
+      "-----SPAM----\n",
+      "\n",
+      "First hundred words: \n",
+      "\n",
+      " ['Subject', 'naturally', 'irresistible', 'your', 'corporate', 'identity', 'lt', 'is', 'really', 'hard', 'to', 'recollect', 'a', 'company', 'the', 'market', 'full', 'of', 'suqgestions', 'and', 'information', 'isoverwhelminq', 'but', 'good', 'catchy', 'logo', 'stylish', 'statlonery', 'outstanding', 'website', 'will', 'make', 'task', 'much', 'easier', 'we', 'do', 'not', 'promise', 'that', 'havinq', 'ordered', 'iogo', 'automaticaily', 'become', 'world', 'ieader', 'it', 'isguite', 'ciear', 'without', 'products', 'effective', 'business', 'organization', 'practicable', 'aim', 'be', 'hotat', 'nowadays', 'marketing', 'efforts', 'more', 'here', 'list', 'clear', 'benefits', 'creativeness', 'hand', 'made', 'original', 'logos', 'specially', 'done', 'reflect', 'distinctive', 'image', 'convenience', 'stationery', 'are', 'provided', 'in', 'all', 'formats', 'easy', 'use', 'content', 'management', 'system', 'letsyou', 'change', 'even', 'its', 'structure', 'promptness', 'you', 'see', 'drafts', 'within', 'three']\n",
+      "\n",
+      "Number of unique words:  103840\n",
+      "\n",
+      "Average number of unique words in each email:  108.96117523609654\n",
+      "-----NOT SPAM----\n",
+      "\n",
+      "First hundred words: \n",
+      "\n",
+      " ['Subject', 'sacramento', 'weather', 'station', 'fyi', 'forwarded', 'by', 'mike', 'a', 'roberts', 'hou', 'ect', 'on', 'am', 'scott', 'tholan', 'enron', 'pm', 'to', 'mark', 'tawney', 'gary', 'taylor', 'cc', 'chris', 'clark', 'na', 'subject', 'hey', 'guys', 'we', 're', 'talking', 'contractor', 's', 'that', 'can', 'build', 'us', 'hopefully', 'very', 'quickly', 'for', 'placement', 'in', 'california', 'variety', 'of', 'legal', 'and', 'operational', 'reasons', 'i', 'need', 'confirm', 'some', 'the', 'following', 'requirements', 'as', 'soon', 'possible', 'so', 'proceed', 'you', 'rainfall', 'snowfall', 'temperature', 'measurement', 'from', 'one', 'high', 'accuracy', 'commercially', 'available', 'b', 'daily', 'feed', 'this', 'data', 'desk', 'does', 'mean', 'dump', 'at', 'set', 'time', 'per', 'day', 'alternatively', 'will', 'check', 'real', 'perhaps', 'varying', 'multiple', 'times', 'during', 'c', 'be']\n",
+      "\n",
+      "Number of unique words:  377062\n",
+      "\n",
+      "Average number of unique words in each email:  122.90156453715775\n"
      ]
     }
    ],
    "source": [
-    "text = train_data['text'][4]\n",
-    "print('Text: ', text)\n",
-    "print('\\nLength of text: ', len(text))\n",
+    "sample_text = train_data.text[4]\n",
+    "print('Sample text:\\n\\n', text)\n",
+    "print('\\nLength of sample text: ', len(text))\n",
     "\n",
     "def word_split(text):\n",
     "    word_dict = {}\n",
@@ -570,33 +595,47 @@
     "                continue\n",
     "    return word_dict\n",
     "\n",
-    "def get_all_words(text_list):\n",
+    "def get_all_words(start, text_list):\n",
     "    local_word_list = []\n",
-    "    for i in range(len(text_list)):\n",
+    "    for i in range(start, len(text_list) + start):\n",
     "        text = text_list[i]\n",
     "        word_dict = word_split(text)\n",
     "        for word in word_dict:\n",
     "            local_word_list.append(word)\n",
     "    return local_word_list\n",
     "            \n",
-    "    \n",
-    "words = get_all_words(train_data['text'])\n",
-    "    \n",
-    "print('\\nWord count: ', word_split(text))\n",
-    "print('\\nAll words: ', words[:100])\n",
-    "print('\\nNumber of unique words: ', len(words)) \n",
-    "print('\\nAverage number of unique words in each email: ', len(words)/len(train_data['text']))\n",
-    "            \n",
-    "            \n",
-    "    \n",
-    "    "
+    "emails = train_data.text\n",
+    "all_words = get_all_words(0, emails)\n",
+    "\n",
+    "print('-----ALL WORDS----')\n",
+    "print('\\nWord count: \\n\\n', word_split(text))\n",
+    "print('\\nFirst hundred words: \\n\\n', all_words[:100])\n",
+    "print('\\nNumber of unique words: ', len(all_words)) \n",
+    "print('\\nAverage number of unique words in each email: ', len(all_words)/len(emails))\n",
+    "\n",
+    "spam = train_data.text[train_data.spam > 0]\n",
+    "spam_words = get_all_words(0, spam)\n",
+    "\n",
+    "print('-----SPAM----')\n",
+    "print('\\nFirst hundred words: \\n\\n', spam_words[:100])\n",
+    "print('\\nNumber of unique words: ', len(spam_words)) \n",
+    "print('\\nAverage number of unique words in each email: ', len(spam_words)/len(spam))\n",
+    "\n",
+    "\n",
+    "non_spam = train_data.text[train_data.spam < 1]\n",
+    "non_spam_words = get_all_words(953, non_spam)\n",
+    "\n",
+    "print('-----NOT SPAM----')\n",
+    "print('\\nFirst hundred words: \\n\\n', non_spam_words[:100])\n",
+    "print('\\nNumber of unique words: ', len(non_spam_words)) \n",
+    "print('\\nAverage number of unique words in each email: ', len(non_spam_words)/len(non_spam))\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": []
