Implemented functions for counting words.

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
@@ -13,13 +13,14 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
+    "from operator import itemgetter\n",
     "\n",
     "path = './/Data//Emails'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -489,7 +490,7 @@
        "[4021 rows x 3 columns]"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,59 +525,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample text:\n",
-      "\n",
-      " Subject: great nnews  hello , welcome to medzonline sh groundsel op  we are pleased to introduce ourselves as one of the ieading online phar felicitation maceuticai shops .  helter v  shakedown r  a cosmopolitan l  l blister l  l bestow ag  ac tosher l  is coadjutor va  confidant um  andmanyother .  - sav inexpiable e over 75 %  - total confide leisure ntiaiity  - worldwide s polite hlpplng  - ov allusion er 5 miilion customers in 150 countries  have devitalize a nice day !\n",
-      "\n",
-      "Length of sample text:  478\n",
-      "-----ALL WORDS----\n",
-      "\n",
-      "Word count: \n",
-      "\n",
-      " {'Subject': 1, 'great': 1, 'nnews': 1, 'hello': 1, 'welcome': 1, 'to': 2, 'medzonline': 1, 'sh': 1, 'groundsel': 1, 'op': 1, 'we': 1, 'are': 1, 'pleased': 1, 'introduce': 1, 'ourselves': 1, 'as': 1, 'one': 1, 'of': 1, 'the': 1, 'ieading': 1, 'online': 1, 'phar': 1, 'felicitation': 1, 'maceuticai': 1, 'shops': 1, 'helter': 1, 'v': 1, 'shakedown': 1, 'r': 1, 'a': 2, 'cosmopolitan': 1, 'l': 5, 'blister': 1, 'bestow': 1, 'ag': 1, 'ac': 1, 'tosher': 1, 'is': 1, 'coadjutor': 1, 'va': 1, 'confidant': 1, 'um': 1, 'andmanyother': 1, 'sav': 1, 'inexpiable': 1, 'e': 1, 'over': 1, 'total': 1, 'confide': 1, 'leisure': 1, 'ntiaiity': 1, 'worldwide': 1, 's': 1, 'polite': 1, 'hlpplng': 1, 'ov': 1, 'allusion': 1, 'er': 1, 'miilion': 1, 'customers': 1, 'in': 1, 'countries': 1, 'have': 1, 'devitalize': 1, 'nice': 1, 'day': 1}\n",
-      "\n",
-      "First hundred words: \n",
-      "\n",
-      " ['Subject', 'naturally', 'irresistible', 'your', 'corporate', 'identity', 'lt', 'is', 'really', 'hard', 'to', 'recollect', 'a', 'company', 'the', 'market', 'full', 'of', 'suqgestions', 'and', 'information', 'isoverwhelminq', 'but', 'good', 'catchy', 'logo', 'stylish', 'statlonery', 'outstanding', 'website', 'will', 'make', 'task', 'much', 'easier', 'we', 'do', 'not', 'promise', 'that', 'havinq', 'ordered', 'iogo', 'automaticaily', 'become', 'world', 'ieader', 'it', 'isguite', 'ciear', 'without', 'products', 'effective', 'business', 'organization', 'practicable', 'aim', 'be', 'hotat', 'nowadays', 'marketing', 'efforts', 'more', 'here', 'list', 'clear', 'benefits', 'creativeness', 'hand', 'made', 'original', 'logos', 'specially', 'done', 'reflect', 'distinctive', 'image', 'convenience', 'stationery', 'are', 'provided', 'in', 'all', 'formats', 'easy', 'use', 'content', 'management', 'system', 'letsyou', 'change', 'even', 'its', 'structure', 'promptness', 'you', 'see', 'drafts', 'within', 'three']\n",
-      "\n",
-      "Number of unique words:  480902\n",
-      "\n",
-      "Average number of unique words in each email:  119.59761253419548\n",
-      "-----SPAM----\n",
-      "\n",
-      "First hundred words: \n",
-      "\n",
-      " ['Subject', 'naturally', 'irresistible', 'your', 'corporate', 'identity', 'lt', 'is', 'really', 'hard', 'to', 'recollect', 'a', 'company', 'the', 'market', 'full', 'of', 'suqgestions', 'and', 'information', 'isoverwhelminq', 'but', 'good', 'catchy', 'logo', 'stylish', 'statlonery', 'outstanding', 'website', 'will', 'make', 'task', 'much', 'easier', 'we', 'do', 'not', 'promise', 'that', 'havinq', 'ordered', 'iogo', 'automaticaily', 'become', 'world', 'ieader', 'it', 'isguite', 'ciear', 'without', 'products', 'effective', 'business', 'organization', 'practicable', 'aim', 'be', 'hotat', 'nowadays', 'marketing', 'efforts', 'more', 'here', 'list', 'clear', 'benefits', 'creativeness', 'hand', 'made', 'original', 'logos', 'specially', 'done', 'reflect', 'distinctive', 'image', 'convenience', 'stationery', 'are', 'provided', 'in', 'all', 'formats', 'easy', 'use', 'content', 'management', 'system', 'letsyou', 'change', 'even', 'its', 'structure', 'promptness', 'you', 'see', 'drafts', 'within', 'three']\n",
-      "\n",
-      "Number of unique words:  103840\n",
-      "\n",
-      "Average number of unique words in each email:  108.96117523609654\n",
-      "-----NOT SPAM----\n",
-      "\n",
-      "First hundred words: \n",
-      "\n",
-      " ['Subject', 'sacramento', 'weather', 'station', 'fyi', 'forwarded', 'by', 'mike', 'a', 'roberts', 'hou', 'ect', 'on', 'am', 'scott', 'tholan', 'enron', 'pm', 'to', 'mark', 'tawney', 'gary', 'taylor', 'cc', 'chris', 'clark', 'na', 'subject', 'hey', 'guys', 'we', 're', 'talking', 'contractor', 's', 'that', 'can', 'build', 'us', 'hopefully', 'very', 'quickly', 'for', 'placement', 'in', 'california', 'variety', 'of', 'legal', 'and', 'operational', 'reasons', 'i', 'need', 'confirm', 'some', 'the', 'following', 'requirements', 'as', 'soon', 'possible', 'so', 'proceed', 'you', 'rainfall', 'snowfall', 'temperature', 'measurement', 'from', 'one', 'high', 'accuracy', 'commercially', 'available', 'b', 'daily', 'feed', 'this', 'data', 'desk', 'does', 'mean', 'dump', 'at', 'set', 'time', 'per', 'day', 'alternatively', 'will', 'check', 'real', 'perhaps', 'varying', 'multiple', 'times', 'during', 'c', 'be']\n",
-      "\n",
-      "Number of unique words:  377062\n",
-      "\n",
-      "Average number of unique words in each email:  122.90156453715775\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "sample_text = train_data.text[4]\n",
-    "print('Sample text:\\n\\n', text)\n",
-    "print('\\nLength of sample text: ', len(text))\n",
-    "\n",
     "def word_split(text):\n",
     "    word_dict = {}\n",
     "    current_word = str()\n",
@@ -595,50 +549,65 @@
     "                continue\n",
     "    return word_dict\n",
     "\n",
-    "def get_all_words(start, text_list):\n",
+    "def local_words(text_list):\n",
     "    local_word_list = []\n",
-    "    for i in range(start, len(text_list) + start):\n",
-    "        text = text_list[i]\n",
+    "    for i in range(len(text_list)):\n",
+    "        text = text_list.iloc[i]\n",
     "        word_dict = word_split(text)\n",
     "        for word in word_dict:\n",
     "            local_word_list.append(word)\n",
     "    return local_word_list\n",
+    "\n",
+    "def local_word_dict(text_list):\n",
+    "    local_word_dict = {}\n",
+    "    for i in range(len(text_list)):\n",
+    "        word_dict = word_split(text_list.iloc[i])\n",
+    "        local_word_dict = {word: local_word_dict.get(word, 0) + word_dict.get(word, 0) for word in set(local_word_dict)|set(word_dict)}\n",
+    "    return local_word_dict\n",
+    "\n",
+    "def top_words(n, word_dict):\n",
+    "    assert n < len(word_dict)\n",
+    "    top_dict = {}\n",
+    "    sorted_keys = sorted(word_dict, key=word_dict.get, reverse=True)\n",
+    "    for i in range(n):\n",
+    "        top_dict[sorted_keys[i]] = word_dict[sorted_keys[i]]\n",
+    "    return top_dict\n",
+    "        \n",
     "            \n",
     "emails = train_data.text\n",
-    "all_words = get_all_words(0, emails)\n",
-    "\n",
-    "print('-----ALL WORDS----')\n",
-    "print('\\nWord count: \\n\\n', word_split(text))\n",
-    "print('\\nFirst hundred words: \\n\\n', all_words[:100])\n",
-    "print('\\nNumber of unique words: ', len(all_words)) \n",
-    "print('\\nAverage number of unique words in each email: ', len(all_words)/len(emails))\n",
+    "all_words = local_words(emails)\n",
     "\n",
     "spam = train_data.text[train_data.spam > 0]\n",
-    "spam_words = get_all_words(0, spam)\n",
-    "\n",
-    "print('-----SPAM----')\n",
-    "print('\\nFirst hundred words: \\n\\n', spam_words[:100])\n",
-    "print('\\nNumber of unique words: ', len(spam_words)) \n",
-    "print('\\nAverage number of unique words in each email: ', len(spam_words)/len(spam))\n",
-    "\n",
+    "spam_words = local_words(spam)\n",
     "\n",
     "non_spam = train_data.text[train_data.spam < 1]\n",
-    "non_spam_words = get_all_words(953, non_spam)\n",
+    "non_spam_words = local_words(non_spam)\n",
     "\n",
-    "print('-----NOT SPAM----')\n",
-    "print('\\nFirst hundred words: \\n\\n', non_spam_words[:100])\n",
-    "print('\\nNumber of unique words: ', len(non_spam_words)) \n",
-    "print('\\nAverage number of unique words in each email: ', len(non_spam_words)/len(non_spam))\n"
+    "email_dict = local_word_dict(emails)\n",
+    "\n",
+    "spam_dict = local_word_dict(spam)\n",
+    "\n",
+    "non_spam_dict = local_word_dict(non_spam)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'the': 6239, 'to': 5686, 'and': 4588, 'of': 3949, 'you': 3400, 'a': 3374, 'in': 2788, 'your': 2531, 'for': 2258, 'is': 2093}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(top_words(10, spam_dict))"
+   ]
   }
  ],
  "metadata": {
