Some more feature extraction, as well as rough outline for design matrix and response.

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 60,
    "metadata": {
     "collapsed": true
    },
@@ -14,8 +14,10 @@
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "from operator import itemgetter\n",
+    "import json\n",
     "\n",
-    "path = './/Data//Emails'"
+    "path = './/Data//Emails'\n",
+    "dict_path = './/Data//English Words'"
    ]
   },
   {
@@ -608,6 +610,91 @@
    "source": [
     "print(top_words(10, spam_dict))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "english_dict_file = os.path.join(dict_path, 'words_dictionary.json')\n",
+    "with open(english_dict_file,\"r\") as english_dictionary:\n",
+    "    english_words_dict = json.load(english_dictionary)\n",
+    "english_words_set = set(english_words_dict.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def text_dict_check(text_dict, english_dict_set):\n",
+    "    correct_words = 0\n",
+    "    incorrect_words = 0\n",
+    "    text_set = set(text_dict.keys())\n",
+    "    for word in text_set:\n",
+    "        if word in english_dict_set:\n",
+    "            correct_words += 1\n",
+    "    return correct_words/len(text_dict)\n",
+    "\n",
+    "non_spam_prop = np.mean(np.array([text_dict_check(word_split(non_spam.iloc[i]), english_words_set)\n",
+    "                                  for i in range(len(non_spam))]))\n",
+    "spam_prop = np.mean(np.array([text_dict_check(word_split(spam.iloc[i]), english_words_set)\n",
+    "                              for i in range(len(spam))]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def create_design_matrix(data, english_dict_set):\n",
+    "    features = 3\n",
+    "    observations = len(data)\n",
+    "    X = np.zeros((observations, features))\n",
+    "    for i in range(observations):\n",
+    "        mail = data.text.iloc[i]\n",
+    "        #Number of unique words\n",
+    "        d = word_split(mail)\n",
+    "        X[i, 0] = len(d)/sum(d.values())\n",
+    "        #Proportion correct words\n",
+    "        X[i, 1] = text_dict_check(d, english_dict_set)\n",
+    "    return X\n",
+    "    \n",
+    "def create_response_vector(data):\n",
+    "    Y = np.array(data.spam)\n",
+    "    Y[Y == 0] = -1\n",
+    "    return Y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "Y = create_response_vector(train_data)\n",
+    "X = create_design_matrix(train_data, english_words_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
