Simple logistic regression

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -650,14 +650,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 177,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "def create_design_matrix(data, english_dict_set):\n",
-    "    features = 3\n",
+    "    features = 2\n",
     "    observations = len(data)\n",
     "    X = np.zeros((observations, features))\n",
     "    for i in range(observations):\n",
@@ -677,15 +677,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 178,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.755232029117\n",
+      "0.771144278607\n",
+      "-3155\n",
+      "3297\n"
+     ]
+    }
+   ],
    "source": [
-    "Y = create_response_vector(train_data)\n",
-    "X = create_design_matrix(train_data, english_words_set)"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "def data_split(data):\n",
+    "    test_indices = np.random.choice(len(data), len(data)//5)\n",
+    "    train_indices = np.array([i for i in range(len(data)) if i not in test_indices])\n",
+    "    Y = create_response_vector(data)\n",
+    "    X = create_design_matrix(data, english_words_set)\n",
+    "    X_train = X[train_indices]\n",
+    "    Y_train = Y[train_indices]\n",
+    "    X_test = X[test_indices]\n",
+    "    Y_test = Y[test_indices]\n",
+    "    return X_train, X_test, Y_train, Y_test\n",
+    "\n",
+    "X_train, X_test, Y_train, Y_test = data_split(train_data)\n",
+    "\n",
+    "lr = LogisticRegression().fit(X_train, Y_train)\n",
+    "print(lr.score(X_train, Y_train))\n",
+    "print(lr.score(X_test, Y_test))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.23700571997015668\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
