--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 298,
    "metadata": {
     "collapsed": true
    },
@@ -17,7 +17,9 @@
     "import json\n",
     "\n",
     "path = './/Data//Emails'\n",
-    "dict_path = './/Data//English Words'"
+    "dict_path = './/Data//English Words'\n",
+    "name_path = './/Data//English Names'\n",
+    "additional_path  = './/Data//Additional'"
    ]
   },
   {
@@ -533,6 +535,7 @@
    },
    "outputs": [],
    "source": [
+    "#Creates dictionary of the form {word(str):number(int)} for a single piece of text\n",
     "def word_split(text):\n",
     "    word_dict = {}\n",
     "    current_word = str()\n",
@@ -551,6 +554,7 @@
     "                continue\n",
     "    return word_dict\n",
     "\n",
+    "#Creates a list of all words in the data set\n",
     "def local_words(text_list):\n",
     "    local_word_list = []\n",
     "    for i in range(len(text_list)):\n",
@@ -560,6 +564,7 @@
     "            local_word_list.append(word)\n",
     "    return local_word_list\n",
     "\n",
+    "#Creates a dictionary similar to word_split, but for full data set\n",
     "def local_word_dict(text_list):\n",
     "    local_word_dict = {}\n",
     "    for i in range(len(text_list)):\n",
@@ -567,6 +572,7 @@
     "        local_word_dict = {word: local_word_dict.get(word, 0) + word_dict.get(word, 0) for word in set(local_word_dict)|set(word_dict)}\n",
     "    return local_word_dict\n",
     "\n",
+    "#Returns the n most frequent words in a dictionary of the type described in word_split\n",
     "def top_words(n, word_dict):\n",
     "    assert n < len(word_dict)\n",
     "    top_dict = {}\n",
@@ -575,7 +581,7 @@
     "        top_dict[sorted_keys[i]] = word_dict[sorted_keys[i]]\n",
     "    return top_dict\n",
     "        \n",
-    "            \n",
+    "#Applying the functions to different subsets of the data            \n",
     "emails = train_data.text\n",
     "all_words = local_words(emails)\n",
     "\n",
@@ -594,45 +600,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'the': 6239, 'to': 5686, 'and': 4588, 'of': 3949, 'you': 3400, 'a': 3374, 'in': 2788, 'your': 2531, 'for': 2258, 'is': 2093}\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(top_words(10, spam_dict))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 299,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "#Reading external data into files. Dictionary, names, other custom lists\n",
+    "\n",
     "english_dict_file = os.path.join(dict_path, 'words_dictionary.json')\n",
     "with open(english_dict_file,\"r\") as english_dictionary:\n",
     "    english_words_dict = json.load(english_dictionary)\n",
-    "english_words_set = set(english_words_dict.keys())"
+    "english_words_set = set(english_words_dict.keys())\n",
+    "\n",
+    "english_fnames_file = os.path.join(name_path, 'popular-both-first.txt')\n",
+    "first_names = pd.read_csv(english_fnames_file, header=None)\n",
+    "english_fnames_list = first_names.iloc[:, 0]\n",
+    "english_fnames_list = [english_fnames_list[i].lower() for i in range(len(english_fnames_list))\n",
+    "                      if isinstance(english_fnames_list[i], str)]\n",
+    "english_fname_set = set(english_fnames_list)\n",
+    "\n",
+    "english_lnames_file = os.path.join(name_path, 'census-dist-2500-last.csv')\n",
+    "last_names = pd.read_csv(english_lnames_file, header=None)\n",
+    "english_lnames_list = last_names.iloc[:, 0]\n",
+    "english_lnames_list = [english_lnames_list[i].lower() for i in range(len(english_lnames_list))\n",
+    "                      if isinstance(english_lnames_list[i], str)]\n",
+    "english_lname_set = set(english_lnames_list)\n",
+    "\n",
+    "english_greetings_file = os.path.join(additional_path, 'greetings.txt')\n",
+    "greetings = pd.read_csv(english_greetings_file, header=None)\n",
+    "greetings_list = greetings.iloc[:, 0]\n",
+    "greetings_set = set(greetings_list)\n",
+    "\n",
+    "indicator_file = os.path.join(additional_path, 'indicators.txt')\n",
+    "indicators = pd.read_csv(indicator_file, header=None)\n",
+    "indicators_list = indicators.iloc[:, 0]\n",
+    "indicators_set = set(indicators_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 281,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "#Getting proportion of correct words\n",
     "def text_dict_check(text_dict, english_dict_set):\n",
     "    correct_words = 0\n",
     "    incorrect_words = 0\n",
@@ -645,30 +659,49 @@
     "non_spam_prop = np.mean(np.array([text_dict_check(word_split(non_spam.iloc[i]), english_words_set)\n",
     "                                  for i in range(len(non_spam))]))\n",
     "spam_prop = np.mean(np.array([text_dict_check(word_split(spam.iloc[i]), english_words_set)\n",
-    "                              for i in range(len(spam))]))"
+    "                              for i in range(len(spam))]))\n",
+    "\n",
+    "#Check dictionary for words also in set\n",
+    "def personal_names_check(text_dict, english_name_set):\n",
+    "    personal_names = 0\n",
+    "    text_set = set(text_dict.keys())\n",
+    "    for word in text_set:\n",
+    "        if word in english_name_set:\n",
+    "            personal_names += 1\n",
+    "    return personal_names"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 300,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def create_design_matrix(data, english_dict_set):\n",
-    "    features = 2\n",
+    "#Collecting all features in a numpy array\n",
+    "def create_design_matrix(data, english_dict_set, english_name_set):\n",
+    "    features = 6\n",
     "    observations = len(data)\n",
     "    X = np.zeros((observations, features))\n",
     "    for i in range(observations):\n",
     "        mail = data.text.iloc[i]\n",
-    "        #Number of unique words\n",
     "        d = word_split(mail)\n",
+    "        #Proportion of unique words\n",
     "        X[i, 0] = len(d)/sum(d.values())\n",
     "        #Proportion correct words\n",
-    "        X[i, 1] = text_dict_check(d, english_dict_set)\n",
+    "        X[i, 1] = text_dict_check(d, english_words_set)\n",
+    "        #Number of personal names\n",
+    "        X[i, 2] = personal_names_check(d, english_fname_set)\n",
+    "        #Number of last names\n",
+    "        X[i, 3] = personal_names_check(d, english_lname_set)\n",
+    "        #Number of greetings\n",
+    "        X[i, 4] = personal_names_check(d, greetings_set)\n",
+    "        #Number of indicators\n",
+    "        X[i, 5] = personal_names_check(d, indicators_set)\n",
     "    return X\n",
-    "    \n",
+    "\n",
+    "#Creating numpy array for response\n",
     "def create_response_vector(data):\n",
     "    Y = np.array(data.spam)\n",
     "    Y[Y == 0] = -1\n",
@@ -677,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 302,
    "metadata": {
     "collapsed": false
    },
@@ -686,10 +719,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.755232029117\n",
-      "0.771144278607\n",
-      "-3155\n",
-      "3297\n"
+      "0.846433990895\n",
+      "0.828358208955\n"
      ]
     }
    ],
@@ -700,7 +731,7 @@
     "    test_indices = np.random.choice(len(data), len(data)//5)\n",
     "    train_indices = np.array([i for i in range(len(data)) if i not in test_indices])\n",
     "    Y = create_response_vector(data)\n",
-    "    X = create_design_matrix(data, english_words_set)\n",
+    "    X = create_design_matrix(data, english_words_set, english_name_set)\n",
     "    X_train = X[train_indices]\n",
     "    Y_train = Y[train_indices]\n",
     "    X_test = X[test_indices]\n",
@@ -708,7 +739,6 @@
     "    return X_train, X_test, Y_train, Y_test\n",
     "\n",
     "X_train, X_test, Y_train, Y_test = data_split(train_data)\n",
-    "\n",
     "lr = LogisticRegression().fit(X_train, Y_train)\n",
     "print(lr.score(X_train, Y_train))\n",
     "print(lr.score(X_test, Y_test))"
@@ -716,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 321,
    "metadata": {
     "collapsed": false
    },
@@ -725,11 +755,71 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.23700571997015668\n"
+      "0.86170212766\n",
+      "0.856965174129\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "from sklearn.svm import LinearSVC, NuSVC\n",
+    "\n",
+    "X_train, X_test, Y_train, Y_test = data_split(train_data)\n",
+    "svm = NuSVC(nu=0.3).fit(X_train, Y_train)\n",
+    "print(svm.score(X_train, Y_train))\n",
+    "print(svm.score(X_test, Y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 354,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.900243309002\n",
+      "0.874378109453\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
+    "X_train, X_test, Y_train, Y_test = data_split(train_data)\n",
+    "tree = DecisionTreeClassifier(max_depth=8, random_state=0)\n",
+    "tree.fit(X_train, Y_train)\n",
+    "print(tree.score(X_train, Y_train))\n",
+    "print(tree.score(X_test, Y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 342,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.986047922354\n",
+      "0.866915422886\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "X_train, X_test, Y_train, Y_test = data_split(train_data)\n",
+    "\n",
+    "forest = RandomForestClassifier(n_estimators=10, random_state=0)\n",
+    "forest.fit(X_train, Y_train)\n",
+    "print(forest.score(X_train, Y_train))\n",
+    "print(forest.score(X_test, Y_test))"
+   ]
   },
   {
    "cell_type": "code",
